--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -15,6 +15,11 @@ default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot 
 default.null.message=Property [{0}] of class [{1}] cannot be null
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
 
+user.username.unique=Username must be unique.
+user.email.unique=Email must be unique.
+user.password.mismatch=Passwords do not match.
+
+
 default.paginate.prev=Previous
 default.paginate.next=Next
 default.boolean.true=True
