Fixed delete, database not dropping even on dbCreate: create-drop

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -15,9 +15,14 @@ default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot 
 default.null.message=Property [{0}] of class [{1}] cannot be null
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
 
+
 user.username.unique=Username must be unique.
 user.email.unique=Email must be unique.
 user.password.mismatch=Passwords do not match.
+user.username.null=Username cannot be null.
+user.email.null=Email cannot be null.
+user.password.null=Password is required.
+user.firstName.null=First Name is required
 
 
 default.paginate.prev=Previous
